2009-12-23  Piotr Fusik  <fox@scene.pl>
* win32/gui.c: toggling "Loop" didn't enable the "Save" button
  (introduced last days, spotted by Slaves)


2009-12-22  Piotr Fusik  <fox@scene.pl>
* win32/gui.c: "Loop" in File Information wasn't initially disabled
  for SAP files with no TIME (spotted by Slaves)


2009-12-21  Piotr Fusik  <fox@scene.pl>
* win32/gui.c: improved File Information validation:
  validate Time when leaving this field rather than while typing;
  disable Loop when Time is empty;
  don't ask to save when information is invalid;
  message boxes on Windows which don't do balloon tips (pre-XP)


2009-12-20  Piotr Fusik  <fox@scene.pl>
* win32/gui.c: "Convert" file selector had no file type filter


2009-12-19  Piotr Fusik  <fox@scene.pl>
* win32/gui.c, win32/wasap/wasap.c, win32/winamp/in_asap.c:
  replaced appendInt() with sprintf()

* asap.c, anylang.h: refactored ASAP_ParseDuration;
  strict validation of TIME tags

* win32/gui.c: validate fields in File Information window


2009-12-18  Piotr Fusik  <fox@scene.pl>
* acpu.c: fixed typo in a comment

* flash/ASAP.ppas: "covox" turned into "const"

* flash/ASAP.ppas, asap_internal.h:
  moved ASAP_SampleFormat definition to asap_internal.h

* win32/Makefile: grep version from chksap.pl


2009-12-17  Piotr Fusik  <fox@scene.pl>
* asap.c, anylang.h, asap_internal.h, csharp/ASAP.ppcs, flash/ASAP.ppas,
  java/ASAP.ppjava, javascript/asap.ppjs, javascript/asapweb.ppjs:
  unified duration parsing across programming languages


2009-12-14  Piotr Fusik  <fox@scene.pl>
* asap.c, anylang.h, csharp/ASAP.ppcs:
  C# version depended on localization settings


** 2.0.0 released on 2009-12-10

2009-12-10  Piotr Fusik  <fox@scene.pl>
* win32/Makefile: reverted binary distributions from *-windows.* to *-win32.*

* flash/USAGE, README, win32/Makefile: Flash release

* java/USAGE: XHTML syntax

* INSTALL: fixed formatting

* CREDITS: added Adrian Matoga


2009-12-03  Piotr Fusik  <fox@scene.pl>