@@ -1,3 +1,8 @@
+2009-12-30  Piotr Fusik  <fox@scene.pl>
+* win32/dshow/asap_dsf.cpp, win32/setup/asap.wxs:
+  add file types to Windows Media Player "Open" dialog
+
+
 2009-12-23  Piotr Fusik  <fox@scene.pl>
 * win32/gui.c: toggling "Loop" didn't enable the "Save" button
   (introduced last days, spotted by Slaves)
